--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: The Spaces in Between
+title: Spaces in Between
 logo: /assets/img/logo.png
 description: safe and sound, sometimes messy
 show_downloads: true
