--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Spaces in Between
-logo: /assets/img/logo.png
+logo: /assets/img/81267174.png
 description: safe and sound, sometimes messy
 show_downloads: true
 google_analytics:
