--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Spaces in Between
+title: Spaces
 logo: /assets/img/81267174.png
-description: safe and sound, sometimes messy
+description: for anything
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
