--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Spaces
 logo: /assets/img/81267174.png
-description: for anything
+description: a personal blog
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
